[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altlinux-tools"
version = "0.1"
description = "Alt Linux Tools CLI"
dependencies = [
    "click==8.1.7",
    "requests==2.32.4",
]

[project.scripts]
altlinux-compare = "alt_lib.cli:cli"
